# benchmark_flatten_dict

./: README.md  analyse_results.ipynb  compare_loops.py  main.py  pyproject.toml  test.ipynb  test.py
data/: benchmark_results.json  compare_loops_results.json  generated_data.json
