[project]
name = "benchmark-flatten-dict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt>=1.14.1",
    "duckdb>=1.3.2",
    "flatdict>=4.0.1",
    "ipykernel>=6.30.0",
    "memory-profiler>=0.61.0",
    "pandas>=2.3.1",
]
