[project]
name = "benchmark-flatten-dict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt>=1.14.1",
    "duckdb>=1.3.2",
    "flatdict>=4.0.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "jmespath>=1.0.1",
    "jupyter>=1.1.1",
    "memory-profiler>=0.61.0",
    "multithreading>=0.2.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "seaborn>=0.13.2",
]
